# whisper-example

./: API.md  ARCHITECTURE.md  README.md  SETUP.md  SETUP_MLX.md  pyproject.toml  test_audio.py
backend/: main.py
src/: __init__.py  audio.py  config.py  diarization.py  main.py  transcribe.py
tests/: test_latency.py  test_vad.py
