[project]
name = "whisper-realtime-transcription"
version = "0.1.0"
description = "Real-time transcription app using Whisper"
requires-python = ">=3.12"
dependencies = [
    "mlx-whisper",
    "sounddevice",
    "webrtcvad",
    "numpy",
    "asyncio",
    "uvicorn[standard]",
    "fastapi",
    "python-multipart",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]